[package]
name = "hd_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "~1.0"
hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
log = "~0.4"
reqwest = "~0.11"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
time = "~0.3"
tokio = { version = "~1.17", features = ["rt", "macros", "sync", "fs", "io-util"] }

[dev-dependencies]
simple_logger = "~2.1.0"
