[package]
name = "hd_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "~1.0"
bytes = "~1.1"
digest = "~0.10"
futures = "~0.3"
hyper = { version = "~0.14", features = ["server", "tcp", "http1"] }
log = "~0.4"
reqwest = { version = "~0.11", features = ["stream"] }
rolling-dual-crc = "~0.1"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
sha1 = "~0.10"
time = { version = "~0.3", features = ["serde"] }
tokio = { version = "~1.17", features = ["rt", "macros", "sync", "fs", "io-util", "io-std"] }

[dev-dependencies]
simple_logger = "~2.1.0"
